--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QC'
 - !lcsh 'Electricity -- Early works to 1850'
+- GITenberg
 title: "Experiments and Observations Tending to Illustrate the Nature and Properties\
   \ of Electricity\r\nIn One Letter to Martin Folkes, Esq; President, and Two to the\
   \ Royal Society"
